@@ -2,7 +2,7 @@
 
 WSO2 API Manager is a complete platform for building, integrating, and exposing your digital services as managed APIs in the cloud, on-premise, and hybrid architectures to drive your digital transformation strategy. It comes with a cloud-native, standards-based messaging engine, and an integration framework for integrating APIs, services, data, SaaS, proprietary, and legacy systems and it can also serve streaming-based integrations. The product comes with command-line and developer tools that enable easy design, development, and testing.
 
-**WSO2 API Manager 4.6.0** is the latest **WSO2 API Manager release** and is the successor of **WSO2 API Manager 4.5.0**.
+**WSO2 API Manager 4.7.0** is the latest **WSO2 API Manager release** and is the successor of **WSO2 API Manager 4.6.0**.
 
 For more information on WSO2 API Manager, see the [overview]({{base_path}}/get-started/overview/).
 
@@ -52,7 +52,7 @@ For more information on WSO2 API Manager, see the [overview]({{base_path}}/get-s
 
 ??? note "API Discovery support for Federated Gateways"
 
-    WSO2 API Manager 4.6.0 release introduces the API discovery support for Federated Gateways. The allows organizations to manage APIs deployed in multiple third-party gateways through a unified control plane. Gateways supported in this release include:
+    WSO2 API Manager 4.7.0 release introduces the API discovery support for Federated Gateways. This allows organizations to manage APIs deployed in multiple third-party gateways through a unified control plane. Gateways supported in this release include:
 
     - [AWS API Gateway]({{base_path}}/manage-apis/deploy-and-publish/federated-gateways/aws/discover-apis-on-aws-api-gateway/)
     - [Azure API Gateway]({{base_path}}/deploy-and-publish/federated-gateways/azure/discover-apis-on-azure-api-gateway/)
@@ -134,7 +134,10 @@ For more information on WSO2 API Manager, see the [overview]({{base_path}}/get-s
 
 ## Key Changes
 
-Before upgrading to WSO2 API Manager 4.6.0, review the following architectural considerations that may affect your deployment setup:
+Before upgrading to WSO2 API Manager 4.7.0, review the following architectural considerations that may affect your deployment setup:
+
+- **Removal of Java Security Manager support:**
+The Java Security Manager has been removed as it was deprecated in Java 17 and fully removed in Java 21. WSO2 API Manager no longer supports or relies on the Java Security Manager for defining security policies. If your deployment previously used the `-Djava.security.manager` JVM flag or a `sec.policy` file, these configurations should be removed.
 
 - **Support for Choreo Analytics has been deprecated:**
 Choreo Analytics has been deprecated in favor of Moesif-powered WSO2 Analytics, which offers enhanced insights and observability.
